--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    testImplementation 'com.tngtech.archunit:archunit-junit4:0.23.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.4.2'
+    testImplementation 'com.squareup:kotlinpoet:1.11.0'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
 }
